<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgPizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/pizza_card_view_dos" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/ringm"
        android:text="@string/titulo_principal"
        android:textColor="#020202"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <EditText
        android:id="@+id/cajaNombreReceta"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="@font/ringm"
        android:hint="@string/hint_receta"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#8B000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/rdbCarne"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:buttonTint="#000000"
            android:fontFamily="@font/ringm"
            android:padding="8dp"
            android:text="@string/ingr_carne"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/rdbPollo"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:buttonTint="#000000"
            android:fontFamily="@font/ringm"
            android:padding="8dp"
            android:text="@string/ingr_pollo"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/rdbMixto"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:buttonTint="#000000"
            android:fontFamily="@font/ringm"
            android:padding="8dp"
            android:text="@string/ingr_mixto"
            android:textColor="#000000" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/ringm"
        android:text="@string/txt_ingr_principal"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cajaNombreReceta" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/ringm"
        android:text="@string/txt_ingre_base"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/rdbRoja"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:buttonTint="#000000"
            android:fontFamily="@font/ringm"
            android:padding="10dp"
            android:text="@string/ingr_base_roja"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/rdbBlanca"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:buttonTint="#000000"
            android:fontFamily="@font/ringm"
            android:text="@string/ingr_base_blanca"
            android:textColor="#000000" />
    </RadioGroup>

    <Button
        android:id="@+id/btnGuardarReceta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#FF6E40"
        android:fontFamily="@font/ringm"
        android:text="@string/boton_guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/ringm"
        android:text="@string/ingr_generales"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <CheckBox
        android:id="@+id/chkCebolla"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:buttonTint="#000000"
        android:fontFamily="@font/ringm"
        android:padding="2dp"
        android:text="@string/ingr_generales_cebolla"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/chkTomate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:buttonTint="#000000"
        android:fontFamily="@font/ringm"
        android:padding="2dp"
        android:text="@string/ingr_generales_tomate"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkMorron" />

    <CheckBox
        android:id="@+id/chkMorron"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="38dp"
        android:buttonTint="#000000"
        android:fontFamily="@font/ringm"
        android:padding="2dp"
        android:text="@string/ingr_generales_morron"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/chkChampinon"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="4dp"
        android:buttonTint="#000000"
        android:fontFamily="@font/ringm"
        android:padding="2dp"
        android:text="@string/ingr_generales_champinon"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/chkMorron"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toEndOf="@+id/chkCebolla"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/chkTomateCherry"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:buttonTint="#000000"
        android:fontFamily="@font/ringm"
        android:padding="10dp"
        android:text="@string/ingr_general_tomate_cherry"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkCebolla" />

    <CheckBox
        android:id="@+id/chkPalta"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:buttonTint="#000000"
        android:fontFamily="@font/ringm"
        android:padding="10dp"
        android:text="@string/ingr_general_palta"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/chkTomateCherry"
        app:layout_constraintTop_toBottomOf="@+id/chkChampinon" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/neucha"
        android:text="@string/ingr_alinios"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkPalta" />

    <CheckBox
        android:id="@+id/chkAjo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="33dp"
        android:buttonTint="#000000"
        android:fontFamily="@font/ringm"
        android:padding="10dp"
        android:text="@string/ingr_alinio_ajo"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkTomateCherry" />

    <CheckBox
        android:id="@+id/chkAlbana"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:buttonTint="#000000"
        android:fontFamily="@font/ringm"
        android:padding="10dp"
        android:text="@string/ingr_alinio_albana"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/chkAjo"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <CheckBox
        android:id="@+id/chkOregano"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:buttonTint="#000000"
        android:fontFamily="@font/ringm"
        android:padding="10dp"
        android:text="@string/ingre_alinio_oregano"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/chkAlbana"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>